--- a/app/globals.css
+++ b/app/globals.css
@@ -143,7 +143,7 @@
 }
 
 html {
-  background-image: url("/background.svg");
+  background-image: url("/shared/background.svg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
